--- a/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
+++ b/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>ChocolateyExplorer</id>
-    <version>0.1.0.4-prerelease</version>
+    <version>$version$</version>
     <title>Chocolatey Explorer</title>
     <authors>James Dibble</authors>
     <owners>James Dibble</owners>
