Don't launch the application after install and use the actual name of the manifest

--- a/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.csproj
+++ b/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.csproj
@@ -32,6 +32,7 @@
     <PublisherName>James Dibble</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>index.html</WebPage>
+    <DisallowUrlActivation>true</DisallowUrlActivation>
     <ApplicationRevision>5</ApplicationRevision>
     <ApplicationVersion>0.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
