--- a/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
+++ b/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
@@ -1,20 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
-  <metadata>
-    <id>ChocolateyExplorer</id>
-    <version>$version$</version>
-    <title>Chocolatey Explorer</title>
-    <authors>James Dibble</authors>
-    <owners>James Dibble</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>A GUI to explore Chocolatey sources</description>
-    <copyright>Copyright (c) 2014 James Dibble. All rights reserved.</copyright>
-    <projectUrl>http://chocolatey-explorer.jdibble.co.uk/</projectUrl>
-    <dependencies>
-      <dependency id="chocolatey" version="0.9.8.27" />
-    </dependencies>
-  </metadata>
-  <files>
-    <file src="ChocolateyExplorer.WPF.Installer.ps1" target="tools\chocolateyInstall.ps1" />
-  </files>
+    <metadata>
+        <id>ChocolateyExplorer</id>
+        <version>$version$</version>
+        <title>Chocolatey Explorer</title>
+        <authors>James Dibble</authors>
+        <owners>James Dibble</owners>
+        <licenseUrl>https://github.com/james-dibble/ChocolateyExplorer/blob/master/LICENSE.md</licenseUrl>
+        <projectUrl>http://chocolatey-explorer.jdibble.co.uk/</projectUrl>
+        <iconUrl>http://chocolatey-explorer.jdibble.co.uk/content/chocolatey.ico</iconUrl>
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <description>Chocolatey Explorer is an application to make Chocolatey that little bit more awesome by giving you control over it's basic functions without having to break out PowerShell.</description>
+        <releaseNotes>0.1.0.59
+First full functioning version.  Still considered a beta, however.  Exception handling is wanting.</releaseNotes>
+        <copyright>Copyright (c) 2014 James Dibble. All rights reserved.</copyright>
+        <dependencies>
+            <dependency id="chocolatey" version="0.9.8.27" />
+        </dependencies>
+    </metadata>
+    <files>
+        <file src="ChocolateyExplorer.WPF.Installer.ps1" target="tools\chocolateyInstall.ps1" />
+    </files>
 </package>
