--- a/ChocolateyExplorer.WPF/packages.config
+++ b/ChocolateyExplorer.WPF/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net45" />
+  <package id="ModernUI.WPF" version="1.0.6" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.32.7" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.4.32.7" targetFramework="net45" />
 </packages>
