--- a/ChocolateyExplorer.Website/ChocolateyExplorer.Website.csproj
+++ b/ChocolateyExplorer.Website/ChocolateyExplorer.Website.csproj
@@ -92,6 +92,9 @@
     <Content Include="Content\Style\theme.min.css">
       <DependentUpon>theme.css</DependentUpon>
     </Content>
+    <Content Include="googled89da873de4b424d.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
