Adding some extra SEO stuffs

--- a/ChocolateyExplorer.Website/ChocolateyExplorer.Website.csproj
+++ b/ChocolateyExplorer.Website/ChocolateyExplorer.Website.csproj
@@ -98,6 +98,8 @@
     <Content Include="googled89da873de4b424d.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="robots.txt" />
+    <Content Include="sitemap.xml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
