Refactored to recursive function.  Not any quicker though.  Going to need to page on the presentation layer.

--- a/Chocolatey.OData/Chocolatey.OData.csproj
+++ b/Chocolatey.OData/Chocolatey.OData.csproj
@@ -61,6 +61,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IChocolateyFeed.cs" />
     <Compile Include="IChocolateyFeedFactory.cs" />
+    <Compile Include="PackageOrginiser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\Nuget\Reference.cs">
       <AutoGen>True</AutoGen>
