--- a/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
+++ b/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
@@ -12,6 +12,9 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Chocolatey Explorer is an application to make Chocolatey that little bit more awesome by giving you control over it's basic functions without having to break out PowerShell.</description>
         <releaseNotes>
+          * 0.1.0.94
+              + Improving searching functionality
+              + Bug fixes
           * 0.1.0.93
               + Minor performance improvements when loading packages from OData feeds
               + When exploring a feed, packages are loaded in pages.  No more load all as there
