--- a/Chocolatey.Manager/Chocolatey.Manager.csproj
+++ b/Chocolatey.Manager/Chocolatey.Manager.csproj
@@ -45,8 +45,10 @@
     <Compile Include="IInstalledPackagesManager.cs" />
     <Compile Include="InstalledPackages.cs" />
     <Compile Include="Installer.cs" />
+    <Compile Include="ISetupScriptCreator.cs" />
     <Compile Include="ISourcesManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetupScriptCreator.cs" />
     <Compile Include="Sources.cs" />
   </ItemGroup>
   <ItemGroup>
