Updating changelogs Issue #12

--- a/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
+++ b/ChocolateyExplorer.WPF/ChocolateyExplorer.WPF.nuspec
@@ -12,6 +12,14 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Chocolatey Explorer is an application to make Chocolatey that little bit more awesome by giving you control over it's basic functions without having to break out PowerShell.</description>
         <releaseNotes>
+### 0.2.2.110 
+[Realease Notes](https://github.com/james-dibble/ChocolateyExplorer/milestones/0.2.2.0)
+
++ Improved paging - Loads more packages at once
++ Support for a greater number of HTTP based Chocolatey feeds
++ Only load versions of packages that are of interest
++ Create an install list and export it as a setup script
+
 ### 0.2.1.106
 + Display the packages icon if one exists in the package menu
 + Indicate a package that is already installed
